--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -39,3 +39,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.1'
 }
+
+tasks.withType(Javadoc) {
+    enabled = false
+}
