--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -35,9 +35,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation project(':handyratingbar')
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
 }
 
 tasks.withType(Javadoc) {
