--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     implementation project(':handyratingbar')
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 tasks.withType(Javadoc) {
